EXAFS GUI: change name of template associated with XANES scan from ANGLE_Parameters to XANES_Parameters
This seems more logical and the two files are identical on I18.
B18 has no ANGLE_Parameters.

Change-Id: I5a8e378f3f52d6d9fcb72ff960b3783df2a2e13e

--- a/uk.ac.gda.client.exafs/plugin.xml
+++ b/uk.ac.gda.client.exafs/plugin.xml
@@ -857,7 +857,7 @@
             contentType="uk.ac.diamond.gda.client.exafs.getXanesContent"
             includeInNew="true"
             name="XANES Scan"
-            template="ANGLE_Parameters"
+            template="XANES_Parameters"
             type="Scan">
       </describer>
       <describer
