Fix to maven build for new bundle.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>org.eclipse.scanning.event</module>
 		<module>org.eclipse.scanning.event.queues</module>
 		<module>org.eclipse.scanning.event.ui</module>
+		<module>org.eclipse.scanning.device</module>
 		<module>org.eclipse.scanning.device.ui</module>
 		<module>org.eclipse.scanning.example</module>
 		<module>org.eclipse.scanning.example.xcen</module>
