--- a/uk.ac.diamond.daq.persistence/build.properties
+++ b/uk.ac.diamond.daq.persistence/build.properties
@@ -1,6 +1,8 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
+               jars/toplink-essentials-2b41.jar,\
+               jars/toplink-essentials-agent-2b41.jar,\
                .
 javacDefaultEncoding.. = UTF-8
 jre.compilation.profile = JavaSE-1.7
