DAQ-673 Make Stream Views open-able from the window menu
This dynamically creates menus MJPEG Streams and EPICS Streams under the
window menu if camera configurations are found in the client Spring.
Selecting the menu item opens the Streams View for the correct camera
and stream type.

Includes refactoring out the StreamType enum

Change-Id: I329c96ac7181e424a837e355562ac732434bb3e0

--- a/uk.ac.gda.client/plugin.xml
+++ b/uk.ac.gda.client/plugin.xml
@@ -900,6 +900,11 @@
        </command>
     </toolbar>
  </menuContribution>
+ <menuContribution
+       allPopups="false"
+       class="uk.ac.gda.client.live.stream.view.LiveStreamMenuContribution"
+       locationURI="menu:window?after=showView">
+ </menuContribution>
  
  
  
