DAQ-709 : Remove old Xspress and Vortex ui and server components
Old Xspress1/2 and Vortex server side components (i.e. from before the refactor
to separate the controller from the detector) have been removed.
Similarly, the old detector parameter editors for Xspress2/3 and Vortex
have been removed - the FluorescenceDetectorParametersEditor is now
used to edit settings for the detectors.
Corba implementation has also been removed, since detector export/import is 
now done using RMI.

Change-Id: I0b9a70504c8c5f89da6cc637d4af328bea0a8657

--- a/uk.ac.gda.client.exafs/plugin.xml
+++ b/uk.ac.gda.client.exafs/plugin.xml
@@ -663,11 +663,11 @@
          </contentTypeBinding>
       </editor>
       <editor
-            class="uk.ac.gda.exafs.ui.detector.vortex.VortexParametersEditor"
+            class="uk.ac.gda.exafs.ui.editors.detectors.VortexParametersEditor"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             default="true"
             icon="icons/page_refresh.png"
-            id="uk.ac.gda.exafs.ui.VortexParametersEditor"
+            id="uk.ac.gda.exafs.ui.editors.detectors.VortexParametersEditor"
             name="Vortex Parameters">
          <contentTypeBinding
                contentTypeId="uk.ac.diamond.gda.client.exafs.getVortexContent">
