update project reference following moving LiveStreamView to its own bundle
Change-Id: I227707c6c16e1663149435f4c1e4d8e435910922

--- a/p45-config/.project
+++ b/p45-config/.project
@@ -3,6 +3,7 @@
 	<name>p45-config</name>
 	<comment></comment>
 	<projects>
+		<project>uk.ac.gda.client.live.stream</project>
 		<project>uk.ac.gda.core</project>
 	</projects>
 	<buildSpec>
