Attempted another build fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 dist: trusty
 sudo: required
+group: deprecated-2017Q2
 
 # SonarQube
 # See https://docs.travis-ci.com/user/sonarqube/
@@ -76,6 +77,6 @@ env:
 # compile and test
 script: 
  - mvn -q clean install surefire:test -Dtest.includes=org/eclipse/scanning/**/Suite.java 
-# - mvn -q surefire:test -Dtest.includes=org/eclipse/scanning/**/UISuite.java -Dlog4j.configuration=log4j.properties
+ - mvn -q surefire:test -Dtest.includes=org/eclipse/scanning/**/UISuite.java -Dlog4j.configuration=log4j.properties
  - sonar-scanner
  
