--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ dist: trusty
 sudo: required
 group: deprecated-2017Q2
 
-# SonarQube
-# See https://docs.travis-ci.com/user/sonarqube/
+# SonarCloud
+# See https://docs.travis-ci.com/user/sonarcloud/
 addons:
-  sonarqube:
+  sonarcloud:
     token:
       # See https://travis-ci.org/eclipse/scanning/settings, here be variables
       # SONAR_TOKEN = SONAR_GITHUB_TOKEN = The sonar token at https://sonarqube.com/account/security/
@@ -78,5 +78,5 @@ env:
 script: 
  - mvn -q clean install surefire:test -Dtest.includes=org/eclipse/scanning/**/Suite.java 
  - mvn -q surefire:test -Dtest.includes=org/eclipse/scanning/**/UISuite.java -Dlog4j.configuration=log4j.properties
- - sonar-scanner
- 
+ - mvn -q sonar:sonar
+
