Split maven clean install from first set of tests
This allows us to specify more threads for the compile step, and to see
the compile time separated out from the test time.

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,10 +73,11 @@ install:
 # Set LD_LIBRARY_PATH for the tests. Also set a variable that attempts to clear /tmp on the travis node to avoid it getting large
 env:
   - CLEAR_TMP=true LD_LIBRARY_PATH=/home/travis/build/dawn-hdf/hdf.hdf5lib/lib/linux-x86_64
- 
+
 # compile and test
 script: 
- - mvn -q clean install surefire:test -Dtest.includes=org/eclipse/scanning/**/Suite.java 
+ - mvn -T 4 -q clean install
+ - mvn -q surefire:test -Dtest.includes=org/eclipse/scanning/**/Suite.java
  - mvn -q surefire:test -Dtest.includes=org/eclipse/scanning/**/UISuite.java -Dlog4j.configuration=log4j.properties
  - mvn -q sonar:sonar
 
