Define refresh and submit behaviours
- Inject QueueSpoolerService used on submit
- Use a mock sample description service on refresh
  It is in the same path because depending on the test module created
  problems at runtime

Signed-off-by: Emilio Perez <emilio.perez-juarez@diamond.ac.uk>

--- a/org.eclipse.scanning.device.ui/plugin.xml
+++ b/org.eclipse.scanning.device.ui/plugin.xml
@@ -92,14 +92,14 @@
             name="Detector Data"
             restorable="true">
       </view>
-      <view
+      <e4view
             category="org.eclipse.scanning.device.ui"
             class="org.eclipse.scanning.device.ui.expr.ExperimentSubmissionView"
             icon="icons/switch--arrow.png"
             id="org.eclipse.scanning.device.ui.expr.experimentSubmissionView"
             name="Experiment Submission"
             restorable="true">
-      </view>
+      </e4view>
       
    </extension>
     <extension
