[DAQ-817] Move XmapRunnableDeviceModel to separate plugin
By analogy with AreaDetectorRunnableDeviceModel, move XmapRunnableDeviceModel from uk.ac.gda.devices.xmap to uk.ac.gda.devices.xmap.api.

This removes the dependency of clients on the server-side plugin.

Also create a ServiceHolder for uk.ac.gda.devices.xmap instead of using one from the scanning example package.

Change-Id: I22633b2a78f6552c55bd5abe57165071d09219dc

--- a/uk.ac.gda.devices.xmap.api/plugin.xml
+++ b/uk.ac.gda.devices.xmap.api/plugin.xml
@@ -4,8 +4,8 @@
    <extension
          point="org.eclipse.dawnsci.analysis.api.classregistry">
       <classregistry
-            class="gda.device.detector.xmap.ClassRegistry"
-            id="gda.device.detector.xmap.classregistry">
+            class="gda.device.detector.xmap.api.ClassRegistry"
+            id="gda.device.detector.xmap.api.classregistry">
       </classregistry>
    </extension>
 
