--- a/uk.ac.gda.devices.xmap.api/.project
+++ b/uk.ac.gda.devices.xmap.api/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>uk.ac.gda.devices.xmap</name>
+	<name>uk.ac.gda.devices.xmap.api</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -27,11 +27,6 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.zeroturnaround.eclipse.remoting.remotingBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.pde.ds.core.builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
