--- a/uk.ac.gda.devices.xmap/build.properties
+++ b/uk.ac.gda.devices.xmap/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               OSGI-INF/
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings = true
 jre.compilation.profile = JavaSE-1.8
