Change name of log panel view from 'Logpanel' to 'Log Panel'
Change-Id: Ie2ded79c2cc50ad70b3b81e9941e181a41e47f3a

--- a/uk.ac.gda.client.logpanel/plugin.xml
+++ b/uk.ac.gda.client.logpanel/plugin.xml
@@ -13,7 +13,7 @@
             class="uk.ac.gda.client.logpanel.view.LogpanelView"
             icon="icons/application_error.png"
             id="uk.ac.gda.client.logpanel.view"
-            name="Logpanel">
+            name="Log Panel">
       </view>
    </extension>
    <extension
