Standardise build properties
Add javacDefaultEncoding, javacProjectSettings and jre.compilation.profile
values to all non feature build.properties files.

--- a/org.eclipse.scanning.malcolm.core/build.properties
+++ b/org.eclipse.scanning.malcolm.core/build.properties
@@ -1,6 +1,9 @@
+source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                OSGI-INF/services.xml
-source.. = src/
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
