--- a/org.eclipse.scanning.command/build.properties
+++ b/org.eclipse.scanning.command/build.properties
@@ -4,3 +4,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                scripts/
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
