--- a/org.eclipse.scanning.connector.epics/build.properties
+++ b/org.eclipse.scanning.connector.epics/build.properties
@@ -8,3 +8,6 @@ bin.includes = META-INF/,\
                jars/epics-pvdata-6.0.2.jar,\
                jars/epics-pvaclient-4.2.2.jar,\
                jars/epics-pvaccess-5.0.2.jar
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
