--- a/org.eclipse.scanning.event/build.properties
+++ b/org.eclipse.scanning.event/build.properties
@@ -4,3 +4,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                plugin.xml
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
