--- a/org.eclipse.scanning.example.xcen.ui/build.properties
+++ b/org.eclipse.scanning.example.xcen.ui/build.properties
@@ -4,3 +4,6 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                OSGI-INF/
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
