--- a/org.eclipse.scanning.example.xcen/build.properties
+++ b/org.eclipse.scanning.example.xcen/build.properties
@@ -3,3 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
