--- a/org.eclipse.scanning.example/build.properties
+++ b/org.eclipse.scanning.example/build.properties
@@ -5,3 +5,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                OSGI-INF/
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
