--- a/org.eclipse.scanning.points/build.properties
+++ b/org.eclipse.scanning.points/build.properties
@@ -5,3 +5,6 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                plugin.xml,\
                scripts/
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
