--- a/org.eclipse.scanning.server/build.properties
+++ b/org.eclipse.scanning.server/build.properties
@@ -4,3 +4,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                .,\
                OSGI-INF/
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
