--- a/org.eclipse.scanning.test/build.properties
+++ b/org.eclipse.scanning.test/build.properties
@@ -5,3 +5,6 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                plugin.xml,\
                log4j.properties
+javacDefaultEncoding.. = UTF-8
+javacProjectSettings=true
+jre.compilation.profile = JavaSE-1.8
