--- a/uk.ac.gda.client.live.stream/plugin.xml
+++ b/uk.ac.gda.client.live.stream/plugin.xml
@@ -39,14 +39,14 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="uk.ac.gda.client.live.stream.handlers.SnapshotFromLiveStream"
+            class="uk.ac.gda.client.live.stream.handlers.SnapshotFromLiveStreamHandler"
             commandId="uk.ac.gda.client.live.stream.snapshothandler">
       </handler>
    </extension>
    <extension
          point="org.eclipse.ui.commands">
       <command
-            defaultHandler="uk.ac.gda.client.live.stream.handlers.SnapshotFromLiveStream"
+            defaultHandler="uk.ac.gda.client.live.stream.handlers.SnapshotFromLiveStreamHandler"
             description="Take a snapshot of the live image"
             id="uk.ac.gda.client.live.stream.snapshotcommand"
             name="Snapshot">
