--- a/uk.ac.gda.client.exafs/plugin.xml
+++ b/uk.ac.gda.client.exafs/plugin.xml
@@ -663,7 +663,7 @@
          </contentTypeBinding>
       </editor>
       <editor
-            class="uk.ac.gda.exafs.ui.detector.vortex.VortexParametersEditor"
+            class="uk.ac.gda.exafs.ui.editors.detectors.VortexParametersEditor"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             default="true"
             icon="icons/page_refresh.png"
