Fix to compile / configuration errors
These were seen with e4 oxygen and Java9 based on the new compliance
settings set in scanning.

--- a/org.eclipse.scanning.example.xcen.ui/build.properties
+++ b/org.eclipse.scanning.example.xcen.ui/build.properties
@@ -1,9 +1,11 @@
-source.. = src/
+source.. = src/,\
+           OSGI-INF/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                icons/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               plugin.xml
 javacDefaultEncoding.. = UTF-8
 javacProjectSettings=true
 jre.compilation.profile = JavaSE-1.8
