B18-175 : Check number of detector elements in XML when adding scan to queue
This is now done in a generic way using the FluorescenceDetectorParameters 
interface; XspressParameters has been added to the BeansFactory so that
XMLHelper classes can de-serialise Xspress parameter files.
 
Change-Id: I0e740de040b1bbfc861eac749ac5e1bfefa3c623

--- a/uk.ac.gda.client.exafs/plugin.xml
+++ b/uk.ac.gda.client.exafs/plugin.xml
@@ -707,6 +707,10 @@
             class="uk.ac.gda.beans.vortex.Xspress3Parameters"
             describer="uk.ac.gda.exafs.ui.describers.Xspress3Describer">
       </bean>
+      <bean
+            class="uk.ac.gda.beans.xspress.XspressParameters"
+            describer="uk.ac.gda.exafs.ui.describers.XspressDescriber">
+      </bean>
    </extension>
 
 </plugin>
