fix command id for snapshot command in plugin.xml
Change-Id: I63c250c9b74d417eaef3c6b9f151b8ce48190db6

--- a/uk.ac.gda.client.live.stream/plugin.xml
+++ b/uk.ac.gda.client.live.stream/plugin.xml
@@ -47,7 +47,7 @@
          point="org.eclipse.ui.handlers">
       <handler
             class="uk.ac.gda.client.live.stream.handlers.SnapshotFromLiveStreamHandler"
-            commandId="uk.ac.gda.client.live.stream.snapshothandler">
+            commandId="uk.ac.gda.client.live.stream.snapshotcommand">
       </handler>
       <handler
       		class="uk.ac.gda.client.live.stream.handlers.CreateMapHandler"
