I05-220 Consolidate the i05 and i05-1 perspectives
- Moved the "ARPES Alignment" and "ARPES Experiment" perspectives to uk.gda.arpes
- Deleted the I05-1 Perspectives
- Updated the respective plugin.xml files to take the changes into account
- Deleted the Cryo view from I05
- Deleted the Jython perspective extension as it doesn't seem to be used

Change-Id: I1b7940a396bbefe764565d9ea387fb3adbdd71e2

--- a/uk.ac.gda.arpes/plugin.xml
+++ b/uk.ac.gda.arpes/plugin.xml
@@ -25,6 +25,21 @@
             </contentTypeBinding>
      </editor>
   </extension>
+  <extension
+         point="org.eclipse.ui.perspectives">
+      <perspective
+            class="uk.ac.gda.arpes.perspectives.ArpesAlignmentPerspective"
+            id="uk.ac.gda.arpes.perspectives.ArpesAlignmentPerspective"
+            icon="icons/application_view_gallery.png"
+            name="ARPES Alignment">
+      </perspective>     
+      <perspective
+            class="uk.ac.gda.arpes.perspectives.ArpesExperimentPerspective"
+            id="uk.ac.gda.arpes.perspectives.ArpesExperimentPerspective"
+            icon="icons/application_view_gallery.png"
+            name="ARPES Experiment">
+      </perspective>  
+   </extension>
    <extension
          point="org.eclipse.ui.views">
       <category
