DAQ-774 Fix typo in default units property
Change-Id: I69f77d9f3da2560754daff25d60d4f8dbdb853a4

--- a/p45-config/properties/_common/common_instance_java.properties
+++ b/p45-config/properties/_common/common_instance_java.properties
@@ -45,8 +45,7 @@ gda.util.persistence.database.driver   = org.apache.derby.jdbc.EmbeddedDriver
 gda.util.persistence.database.protocol = jdbc:derby:
 
 # Mapping UI Properties
-# Can be mm, um, nm
-uk.ac.diamond.daq.mapping.ui.deaultUnits = um
+uk.ac.diamond.daq.mapping.ui.defaultUnits = um
 
 #Add all beamline specific keys before this line
 include=${sys:gda.facility.dir}/properties/${sys:gda.mode}/${sys:gda.mode}_facility_java.properties
