Include dummy.mode property in example config
the example-config does not include dls-config so needs to
define dummy mode itself where other beamlines don't

Change-Id: Id81c06e9f938d3530a13a49c0a4d02e189bdfeb8

--- a/example-config/properties/dummy/dummy_instance_java.properties
+++ b/example-config/properties/dummy/dummy_instance_java.properties
@@ -6,6 +6,7 @@ gda.var      = ${gda.config}/../../../gda_var_non_live
 gda.logs.dir = ${gda.config}/../../../gda_logs_non_live
 
 gda.server.host = localhost
+gda.dummy.mode = true
 
 #Add all dummy mode beamline specific keys before this line
 include=../_common/common_instance_java.properties
